# pcf-interview-task

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
ajaxer/: apps.py  models.py  views.py
ajaxer/migrations/: 0001_initial.py
ajaxer/static/ajaxer/: my-element.bundled.js
ajaxer/templates/: base.html  index.html
ajaxer/templates/ajaxer/: subscription_list.html
front/: .eslintrc.cjs  babel.config.json  my-element.bundled.js  my-element.js  package-lock.json  package.json  rollup.config.js  sub-item.js
taskproj/: asgi.py  settings.py  urls.py
taskproj/taskproj/: settings.py  wsgi.py
